<resources>
    <string name="app_name">System Updater</string>
    <string name="checking">Checking for updates…</string>
    <string name="status_error">Couldn\'t check for updates</string>
    <string name="check_for_update">Check for updates</string>
    <string name="nullexp">NullXperience</string>
    <string name="currentdev">CURRENT DEVICE</string>
    <string name="change">Changelogs</string>
    <string name="status_up_to_date">Latest Version</string>
    <string name="status_old_to_date">Update available</string>
    <string name="nointernet">No internet connection available. Please connect to a Wi-Fi and try again.</string>
    <string name="brand_plus_model">%1$s %2$s</string>
    <string name="not_supported">Oops, your device is not supported.</string>
    <string name="close_the_app">Close the app</string>
    <string name="download">Download &amp; Install</string>
    <string-array name="randText">
        <item>downloading bro, please stop blushing at me you piece of junk</item>
        <item>oh yeahh, now i\'m actually mad and you will never know what will happen- bro, im just a corny- im the main char twin</item>
        <item>zesty ahh messages in the big 26 feels like some shii that will only happen in corny ass movies</item>
        <item>i never asked you to tap this shit bro, ts ain\'t sum fire button you\'d see on pubg</item>
        <item>i was lightning before the thunder </item>
        <item>icl ts pmo ngl u pmo too gng u btr nt lrp gng btr strt kys</item>
    </string-array>
    <string name="last_checked">Last checked on %1$s/%2$s/%3$s</string>
    <string name="lastest_ver">You\'re up to date.</string>
    <string name="pls_wait">Please wait</string>
    <string name="fetching_info">Fetching %1$s…</string>
    <string name="downloading">Downloading · %1$s</string>
    <string name="install">Install Now</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="made_with_love">Made with ❤️ by peachpixels</string>
    <string name="credits">Credits</string>
    <string name="null_title">Yet another OneUI ROM.</string>
    <string name="co_authors">ZGX089</string>
    <string name="co_authors_title">Contributors</string>
    <string name="fonts">Fonts</string>
    <string name="fonts_source">fonts.google.com</string>
</resources>